@@ -13,12 +13,10 @@ module Padrino
           end
 
           def app
-            # Sinatra < 1.0 always disable sessions for test env
-            # so if you need them it's necessary force the use
-            # of Rack::Session::Cookie
-            CLASS_NAME.tap { |app| app.use Rack::Session::Cookie }
+            ##
             # You can hanlde all padrino applications using instead:
             #   Padrino.application
+            CLASS_NAME.tap { |app|  }
           end
           TEST
 
