@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Padrino Team", "Nathan Esquenazi", "Davide D'Agostino", "Arthur Chiu"]
-  s.date = %q{2010-03-22}
+  s.date = %q{2010-03-27}
   s.description = %q{Mailer system for padrino allowing easy delivery of application emails}
   s.email = %q{padrinorb@gmail.com}
   s.extra_rdoc_files = [
@@ -32,8 +32,8 @@ Gem::Specification.new do |s|
      "test/fixtures/mailer_app/views/sample_mailer/anniversary_message.erb",
      "test/fixtures/mailer_app/views/sample_mailer/birthday_message.erb",
      "test/helper.rb",
+     "test/test_base.rb",
      "test/test_mail_object.rb",
-     "test/test_mailer_base.rb",
      "test/test_padrino_mailer.rb"
   ]
   s.homepage = %q{http://github.com/padrino/padrino-framework/tree/master/padrino-mailer}
@@ -49,7 +49,6 @@ Gem::Specification.new do |s|
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<padrino-core>, ["= 0.9.7"])
-      s.add_runtime_dependency(%q<tilt>, [">= 0.6"])
       s.add_runtime_dependency(%q<tmail>, [">= 1.2"])
       s.add_development_dependency(%q<shoulda>, [">= 2.10.3"])
       s.add_development_dependency(%q<haml>, [">= 2.2.1"])
@@ -58,7 +57,6 @@ Gem::Specification.new do |s|
       s.add_development_dependency(%q<webrat>, [">= 0.5.1"])
     else
       s.add_dependency(%q<padrino-core>, ["= 0.9.7"])
-      s.add_dependency(%q<tilt>, [">= 0.6"])
       s.add_dependency(%q<tmail>, [">= 1.2"])
       s.add_dependency(%q<shoulda>, [">= 2.10.3"])
       s.add_dependency(%q<haml>, [">= 2.2.1"])
@@ -68,7 +66,6 @@ Gem::Specification.new do |s|
     end
   else
     s.add_dependency(%q<padrino-core>, ["= 0.9.7"])
-    s.add_dependency(%q<tilt>, [">= 0.6"])
     s.add_dependency(%q<tmail>, [">= 1.2"])
     s.add_dependency(%q<shoulda>, [">= 2.10.3"])
     s.add_dependency(%q<haml>, [">= 2.2.1"])
